<resources>
    <string name="app_name">GrossCleaner</string>
    <string name="configurationFileName">TablesConfiguration.xml</string>
    <string name="userDataFileName">UserData.xml</string>
    <string name="SituacionFamiliar">Situación Familiar: </string>
    <string name="Sit1Long">Situación 1: Soltero/a, viudo/a, divorciado/a o separado/a legalmente, con hijos solteros menores de 18 años o incapacitados judicialmente que convivan exclusivamente con el perceptor, sin convivir también con el otro progenitor, siempre que proceda consignar al menos un hijo o descendiente en el apartado "Ascendientes y Descendientes".</string>
    <string name="Sit2Long">Situación 2: Perceptor casado y no separado legalmente cuyo cónyuge no obtenga rentas superiores a 1.500 euros anuales, excluidas las exentas.</string>
    <string name="Sit3Long">Situación 3: Perceptor cuya situación familiar es distinta de las dos anteriores o no desee manifestarla .</string>
    <string name="SalarioBruto">Salario Bruto: </string>
    <string name="Pagas">Pagas: </string>
    <string name="btnCalcular">Calcular</string>
    <string name="SalarioNeto">Salario Neto:</string>
    <string name="iWKE">Wolters Kluwer</string>
    <string name="lblExtra">Pagas Extras:</string>
    <string name="btnDetalle">Detalle</string>
    <string name="preference_file_key">GrossCleaner_UserData</string>
    <string name="lblIRPFManual">% IRPF Manual:</string>
    <string name="lblSituacion">Situación Familiar</string>
    <string name="lblGradoDis">Grado Discapacidad (%)</string>
    <string name="lblDescendMen3">Descendientes Menores de 3 años</string>
    <string name="lblDescend">Descendientes Entre 3 y 25 años</string>
    <string name="lblRedViv">Reducción Vivienda</string>
    <string name="lblHoras">Horas Semanales</string>
</resources>
