<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.raulcorchero.grosscleaner.MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tlMain">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr0"
            android:orientation="horizontal"
            android:visibility="visible"
            android:layout_weight="0"
            android:minHeight="70dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivWK"
                android:layout_column="0"
                android:layout_span="2"
                android:visibility="visible"
                android:background="@mipmap/wke"
                android:minHeight="72dp"
                android:cropToPadding="false"
                android:clickable="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr1"
            android:orientation="horizontal"
            android:visibility="visible"
            android:touchscreenBlocksFocus="false"
            android:minHeight="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/SalarioBruto"
                android:id="@+id/lblBruto"
                android:layout_column="0"
                android:layout_gravity="center"
                android:singleLine="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtBruto"
                android:layout_column="1"
                android:inputType="number"
                android:layout_gravity="center_vertical" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr2"
            android:minHeight="50dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tc10"
                android:orientation="horizontal"
                android:minHeight="50dp"
                android:minWidth="175dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Pagas"
                    android:id="@+id/lblPagas"
                    android:layout_gravity="center"
                    android:layout_marginLeft="33dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tc11"
                android:minHeight="50dp"
                android:minWidth="175dp"
                android:weightSum="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPagas"
                    android:layout_marginLeft="120dp"
                    android:layout_gravity="center_vertical" />
            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr3"
            android:minHeight="20dp"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="50dp"
            android:id="@+id/tr4">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCalcular"
                android:id="@+id/btnCalcular"
                android:layout_column="1"
                android:onClick="calcular"
                android:nestedScrollingEnabled="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr5"
            android:minHeight="10dp">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="60dp"
            android:nestedScrollingEnabled="false"
            android:id="@+id/tr7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/SalarioNeto"
                android:id="@+id/lblNeto"
                android:layout_column="0"
                android:layout_gravity="center"
                android:textSize="28dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="3.000"
                android:id="@+id/txtNeto"
                android:layout_column="1"
                android:layout_gravity="center"
                android:textSize="70dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr8"
            android:minHeight="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/lblExtra"
                android:layout_column="0"
                android:layout_gravity="center"
                android:textSize="28dp"
                android:text="@string/lblExtra" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="3.000"
                android:id="@+id/textView"
                android:layout_column="1"
                android:layout_gravity="center"
                android:textSize="70dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr9"
            android:minHeight="70dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDetalle"
                android:id="@+id/btnDetalle"
                android:layout_column="1" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
